[workspace]
resolver = "2"
members = [
    "crates/rux-shell",
    "crates/rux-cli",
    "crates/rux-layout",
    "crates/rux-paint",
    "crates/rux-parser",
    "crates/rux-style",
    "crates/rux-runtime",
    "crates/rux-text",
    "crates/rux-reactive",
    "crates/rux-script",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/Aine-dickson/rux"

# Shared dependency versions. `vello` re-exports the matching `wgpu`, `kurbo`,
# and `peniko`, so the shell uses `vello::wgpu` rather than pinning wgpu itself
# (avoids a version split between the renderer and the surface).
[workspace.dependencies]
winit = "0.30"
pollster = "0.4"
vello = "0.9"
taffy = "0.7"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
