[package]
name = "rux-paint"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rux painter: turns resolved paint items into a vello Scene."

[dependencies]
vello.workspace = true
image.workspace = true
rux-layout = { path = "../rux-layout" }
rux-text = { path = "../rux-text" }
