[package]
name = "rux-shell"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rux runtime shell: window, GPU surface, input, and frame loop."

[dependencies]
winit.workspace = true
vello.workspace = true
pollster.workspace = true
rux-layout = { path = "../rux-layout" }
rux-paint = { path = "../rux-paint" }
rux-runtime = { path = "../rux-runtime" }
notify = "8.2.0"
